--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -38,7 +39,7 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
-    ],
+    ], 
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
